# bastardcafe-bot

./: Cargo.toml  Dockerfile  LICENSE  README.md
bastard-scrapper/: .env.example  db.py  requirements.txt  scrapper.py  scrapper_parallel.py
data/: board_games_list.json
src/: board_games.rs  main.rs
