[package]
name = "bastard-cafe-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
